# FastApi

day1/FastAPIProject1/: main.py  pyproject.toml
day1/FastAPIProject1/app/models/: users.py
day1/FastAPIProject1/app/schemas/: users.py
